Position elements for first two sections though remained unstyled

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div class="heading">
 
         <!-- header logo that goes to the left -->
+
         <div class="hedear-logo">Header Logo</div>
 
         <!-- space between created by justifying space-between -->
 
         <!-- heading links that goes to the right -->
         <div class="right-links">
-            <ul>
+            <ul class="right-links-list">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
@@ -37,13 +38,13 @@
                 This website has a subtext that goes under the heading. 
                 It is smaller and have lower contrast
             </p>
-            <button class="sign-up-button">Sign up</button>
+            <button class="sign-up-button button">Sign up</button>
         </div>
 
         <!-- this is the image that goes to the right section -->
-        <div class="welcom-image-container">
-            <img class="welcome-image"></img>
-        </div>
+         <div class="image-container">
+            <img class="welcome-image" src="man-image.jpg"></img>         </div>
+        
     </div>
 
     <!-- this section contains additional info that sits right under the welcome section -->
@@ -114,6 +115,6 @@
     <div class="footer">
         Copyright &copy; The Odin Project 2024
     </div>
-    
+
 </body>
 </html>
