contain the page in a container will do additional styling touch-up later

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h2 class="welcome-heading">This website is awesome</h1>
             <p class="welcome-message subtext">
                 This website has a subtext that goes under the heading. 
+                <br>
                 It is smaller and have lower contrast
             </p>
             <button class="sign-up-button button">Sign up</button>
@@ -81,33 +82,36 @@
     <!-- quote container goes under the additional info box contains right and left section -->
     <!-- right section is in column direction and the right is a button -->
     <div class="quote-container">
-        <pre class="quote-paragraph">
+        <p class="quote-paragraph">
             I will always choose a lazy 
+            <br>
             person to do a hard job
+            <br>
             because a lazy person will
+            <br>
             find an easy way to do it.
-        </pre>
+        </p>
         <div class="quote-credit">
             -Bill Gates
         </div>
+    </div>
        
     <!-- this contains the call-to-action section -->
     <!-- this section goes is seperated between left and right 
     the class seperation are the same as the welcome section -->
     <div class="call-to-action-container">
+        <!-- wrapping another container -->
+        <div class="call-to-action-panel">
+            <!-- this section goes to the left -->
+            <div class="left-links">
+                <h4 class="action-header">Call to action! It's time!</h4>
+                <p class="action-subtext subtext">Sign up for the product by clicking the button on the right!</p>
+            </div>
 
-
-
-        <!-- this section goes to the left -->
-        <div class="left-links">
-            <h4 class="action-header">Call to action! It's time!</h4>
-            <br>
-            <p class="action-subtext subtext"></p>
-        </div>
-
-        <!-- this section goes to the right -->
-        <div class="right-links">
-            <button class="sign-up-button"></button>
+            <!-- this section goes to the right -->
+            <div class="right-links">
+                <button class="sign-up-button">Sign up</button>
+            </div>
         </div>
     </div>
 
