Finalized, touch up final style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- header logo that goes to the left -->
 
-        <div class="hedear-logo">Header Logo</div>
+        <div class="header-logo">Header Logo</div>
 
         <!-- space between created by justifying space-between -->
 
@@ -81,18 +81,21 @@
 
     <!-- quote container goes under the additional info box contains right and left section -->
     <!-- right section is in column direction and the right is a button -->
-    <div class="quote-container">
-        <p class="quote-paragraph">
-            I will always choose a lazy 
-            <br>
-            person to do a hard job
-            <br>
-            because a lazy person will
-            <br>
-            find an easy way to do it.
-        </p>
-        <div class="quote-credit">
-            -Bill Gates
+    
+    <div class="quote-section">
+        <div class="quote-container">
+            <p class="quote-paragraph">
+                I will always choose a lazy 
+                <br>
+                person to do a hard job
+                <br>
+                because a lazy person will
+                <br>
+                find an easy way to do it.
+            </p>
+            <div class="quote-credit">
+                -Bill Gates
+            </div>
         </div>
     </div>
        
@@ -110,7 +113,7 @@
 
             <!-- this section goes to the right -->
             <div class="right-links">
-                <button class="sign-up-button">Sign up</button>
+                <button class="sign-up-button button">Sign up</button>
             </div>
         </div>
     </div>
